--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "discord-online-forever-main",
+  "name": "api-transcript",
   "version": "1.0.0",
-  "description": "Keep ypou Discord profile online forever",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "eris": "^0.17.2"
+    "express": "^4.21.1"
   }
 }
