--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,37 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "404.html",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/transcripts/v1/(.*)", "dest": "/index.js" },
-    { "src": "/", "dest": "/404.html" },
-    { "src": "/(.*)", "dest": "/404.html" }
+    {
+      "src": "/transcripts/v1/(.*)",
+      "dest": "/index.js",
+      "methods": ["GET", "POST"],
+      "headers": {
+        "Content-Type": "application/json"
+      }
+    },
+    {
+      "src": "/",
+      "dest": "/404.html",
+      "headers": {
+        "Content-Type": "text/html"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/404.html",
+      "headers": {
+        "Content-Type": "text/html"
+      }
+    }
   ]
 }
